--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -23,7 +23,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/nickname"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/nickname" />
 
     <Button
@@ -31,7 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="68dp"
+        android:onClick="ok"
         android:text="OK"
         app:layout_constraintLeft_toLeftOf="@+id/tel"
         app:layout_constraintTop_toBottomOf="@+id/tel" />
@@ -44,7 +44,6 @@
         android:inputType="textPersonName"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/b_nickname"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/b_nickname" />
 
     <EditText
@@ -55,6 +54,25 @@
         android:inputType="number"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/b_tel"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/b_tel" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="年齡"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginLeft="7dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/tel" />
+
+    <Spinner
+        android:id="@+id/ages"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="9dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/tel" />
 </android.support.constraint.ConstraintLayout>
